desktop header login link fix color contrast

--- a/style/_header.scss
+++ b/style/_header.scss
@@ -85,7 +85,8 @@
                 
                 .login {
                     list-style-type: disc;
-                    color: $grayish-blue;
+                    // color: $grayish-blue;
+                    color: #555962;
                     margin-left: 1rem;
                 }
             }
